Tue Dec 07 19:55:48 GMT 2004  Olly Betts <olly@survex.com>

	* xapian.i,php4/docs/examples/simpleindex.php,
	  php4/docs/examples/simplesearch.php,python/docs/examples/,
	  tcl8/docs/bindings.html,tcl8/docs/examples/simpleindex.tcl,
	  tcl8/docs/examples/simplesearch.tcl: Wrap the new constructors
	  for Database and WritableDatabase, use these in the examples,
	  and removed mentions of Auto::open() from the documentation.
	  Don't wrap the WritableDatabase forms of Auto::open() and
	  Quartz::open() in tcl8 since the destructor never gets called.

Tue Dec 07 19:53:48 GMT 2004  Olly Betts <olly@survex.com>

	* README: Updated to list fully supported languages and improved
	  wording.

Thu Dec 02 13:31:40 GMT 2004  Olly Betts <olly@survex.com>

	* xapian.i: Weight::clone is for internal use - don't wrap it.
	* xapian.i: For PHP4, rename the default BM25Weight ctor to
	  BM25Weight_default and the default TradWeight ctor to
	  TradWeight_default.

Thu Dec 02 13:30:55 GMT 2004  Olly Betts <olly@survex.com>

	* python/Makefile.am: test -d before mkdir to avoid worrying looking
	  warning from make.

Thu Dec 02 03:40:16 GMT 2004  Olly Betts <olly@survex.com>

	* NEWS: Updated.

Thu Dec 02 03:37:06 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac: SWIG 1.3.23 causes warnings (and quite likely problems)
	  with PHP4.  It helps C#, but since that's unfinished, PHP4
	  definitely matters more, so drop back to SWIG 1.3.22.

Thu Dec 02 03:27:37 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac: Added tcl8/docs/Makefile tcl8/docs/examples/Makefile
	  to AC_CONFIG_FILES.

Thu Dec 02 03:05:11 GMT 2004  Olly Betts <olly@survex.com>

	* NEWS,xapian.i: Removed the director for Xapian::Weight for now,
	  since it was causing swig to generate code which didn't compile.

Thu Dec 02 03:03:39 GMT 2004  Olly Betts <olly@survex.com>

	* python/.cvsignore: Updated.

Thu Dec 02 03:00:56 GMT 2004  Olly Betts <olly@survex.com>
