@@ -112,21 +112,13 @@ The ESet has a property, <code>eset.items</code>, which returns a list of tuples
 <tr><td><code>xapian.ESET_WT</code></td><td>Weight</td></tr>
 </table>
 
-<h2>Xapian::Auto</h2>
-
-<p>
-   Functions in <code>Xapian::Auto</code> are mapped directly into the
-   <code>xapian</code> module (so <code>Xapian::Auto::open()</code> becomes
-   <code>xapian.open()</code>, for
-   instance).
-</p>
-
-<h2>Xapian::Quartz::open, Xapian::InMemory::open, and Xapian::Remote::open</h2>
+<h2>Database Factory Functions</h2>
 
 <ul>
-<li> <code>Xapian::Quartz::open()</code> is wrapped as <code>quartz_open()</code>
-<li> <code>Xapian::InMemory::open()</code> is wrapped as <code>inmemory_open()</code>
-<li> <code>Xapian::Remote::open()</code> is wrapped as <code>remote_open()</code> (only
+<li> <code>Xapian::Auto::open_stub()</code> is wrapped as <code>xapian.open_stub()</code>
+<li> <code>Xapian::Quartz::open()</code> is wrapped as <code>xapian.quartz_open()</code>
+<li> <code>Xapian::InMemory::open()</code> is wrapped as <code>xapian.inmemory_open()</code>
+<li> <code>Xapian::Remote::open()</code> is wrapped as <code>xapian.remote_open()</code> (only
 the TCP version is currently wrapped, the "program" version isn't).
 </ul>
 
@@ -146,7 +138,7 @@ the TCP version is currently wrapped, the "program" version isn't).
 <p>
    There is an additional method <code>get_matching_terms()</code> which takes
    an MSetIterator and returns a list of terms in the current query which
-   match the document given by that iterator. This may be slightly
+   match the document given by that iterator.  You may find this
    more convenient than using the TermIterator directly.
 </p>
 
